--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -65,7 +65,7 @@ section {
 }
 
 .page-section__introduction {
-  padding: 8vw 0 60px 0;
+  padding: 8vw 0 8vw 0;
   text-align: center;
 
   .book-cover {
