--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -34,6 +34,14 @@ p {
   margin-top: 50px;
 }
 
+a {
+  color: #b33636;
+
+  &:hover {
+    color: #8a1111;
+  }
+}
+
 section {
   border-top: 1px solid #eee;
 
