--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -62,11 +62,11 @@ section {
   }
 
   a {
-    color: #8a5cb8;
+    //color: #8a5cb8;
     margin-top: 20px;
 
     &:hover {
-      color: #59367c;
+      //color: #59367c;
       text-decoration: none;
     }
   }
